# KinAMP

./: .gitignore  CMakeLists.txt  README.md  armhf-toolchain.cmake  cli_player.cpp  gtk_utils.cpp  gtk_utils.h  music_backend.cpp  music_backend.h  music_player.cpp  stub_lipc.c
assets/: bluetooth_icon.h  close_icon.h  display_icon.h  play_pause_icon.h  repeat_icon.h  repeat_on_icon.h  shuffle_icon.h  shuffle_on_icon.h  skip_next_icon.h  skip_previous_icon.h  standby_icon.h  startkinamp.sh  stop_icon.h  sunny_icon.h  title.h  title_christmas.h  title_christmas_icon.h  title_icon.h
assets/booklet/: kinamp.sh
assets/kual/: config.xml  menu.json
